fix(adminv2), #29414 Double scroll problem on commmunication rules

--- a/admin/src/main/ts/src/assets/admin.scss
+++ b/admin/src/main/ts/src/assets/admin.scss
@@ -950,7 +950,6 @@ ode-lightbox {
     padding: 20px 40px!important;
     border-radius: 3px;
     box-shadow: 2px 2px 10px $shadow-dark;
-    overflow: auto !important;
     & > i {
       &::after {
         content: '\f00d';
